# serde_dyn

./: .travis.yml  Cargo.toml  README.md
serde_dyn/: Cargo.toml
serde_dyn/src/: lib.rs  uuid.rs
src/: lib.rs
uuid_gen/: Cargo.toml
uuid_gen/src/: main.rs
